<resources>
    <string name="app_name">wagerZone</string>
    <string name="accueil">Acceuil</string>
    <string name="connexion">Connexion</string>
    <string name="vous_avez_bien_t_inscrit">Vous avez bien été inscrit!</string>
    <string name="pas_de_compte">Pas de compte?</string>
    <string name="cr_er_un_compte">Créer un compte</string>
    <string name="connexionForm">Connexion:</string>
    <string name="nom_d_utilisateur_ou_courriel">Nom d\'utilisateur ou courriel:</string>
    <string name="mot_de_passe">Mot de passe:</string>
    <string name="se_souvenir_de_moi">Se souvenir de moi:</string>
    <string name="se_connecter">Se connecter</string>
    <string name="inscription">Inscription</string>
    <string name="erreur_information_invalide">Les informations entrées ne sont pas valides</string>
    <string name="succesConnection">Vous êtes connecté!</string>
    <string name="erreur_connexion">Erreur de connexion avec le serveur de WagerZone</string>
    <string name="erreur_compte_inactif">Compte désactivé! Veulliez contacter le support technique pour plus d\'information.</string>
    <string name="compte">Gestion du compte</string>
    <string name="equipe">Les équipes</string>
    <string name="match">Les parties</string>
    <string name="nom_utilisateur">Nom d\'utilisateur</string>
    <string name="information_connexion">Information de connexion</string>
    <string name="confirmer_mdp">Confirmer le mot de passe</string>
    <string name="adresse_courriel">Adresse courriel</string>
    <string name="coordonnee">Coordonnée</string>
    <string name="adresse">Adresse</string>
    <string name="pays">Pays</string>
    <string name="province">Province</string>
    <string name="tel">Téléphone</string>
    <string name="photo">Icone</string>
    <string name="ville">Ville</string>
    <string name="photoInscription">Photo</string>
    <string name="fichier">fichier</string>
    <string name="envoyer">Envoyer</string>
    <string name="obligatoire">Champ obligatoire</string>
    <string name="pas_pareil">Les mots de passes ne sont pas identiques</string>
    <string name="invalide">Ce champ est invalide</string>
    <string name="erreur_inscription">Erreur, impossible de vous inscrire. Réessayer plus tard</string>
    <string name="nom">nom</string>
    <string name="prenom">Prénom</string>
    <string name="erreur_email">Ce courriel est déjà utilisé</string>
    <string name="erreur_username">Ce nom d\'utilisateur est déjà utilisé</string>
    <string name="ddn">Date de naissance</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="confirmedInscription">L\'inscription été complétée</string>
    <string name="revoirForm">Revoir les champs précédents</string>
    <string name="information_compte">Informations du compte</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">supprimer</string>
    <string name="hide">*********</string>
    <string name="erreur_modif">Erreur, impossible de modifier les informations du compte.</string>
    <string name="annuler">Annuler</string>
    <string name="erreur_suppression">Impossible de supprimer le compte</string>
    <string name="retour">Retour</string>
    <string name="ajouter">Ajouter</string>
</resources>