<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InscriptionActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#700E0E"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <include layout="@layout/header"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="24dp"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:layout_marginHorizontal="60dp">

            <TextView
                android:layout_columnSpan="2"
                android:text="@string/information_connexion"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:text="@string/nom_utilisateur" />

            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text=""
                android:layout_columnSpan="2"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:text="@string/mot_de_passe" />
            <EditText
                android:id="@+id/mdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text=""
                android:layout_columnSpan="2"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:text="@string/confirmer_mdp" />
            <EditText
                android:id="@+id/mdp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text=""
                android:layout_columnSpan="2"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:text="@string/adresse_courriel" />
            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text=""
                android:layout_columnSpan="2"
                android:layout_marginBottom="40dp"/>

            <TextView
                android:layout_columnSpan="2"
                android:text="@string/coordonnee"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:text="@string/pays" />
            <Spinner
                android:layout_columnSpan="2"
                android:id="@+id/pays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:prompt="@string/pays"
                android:spinnerMode="dialog" />

            <TextView
                android:text="@string/ville" />
            <Spinner
                android:layout_columnSpan="2"
                android:id="@+id/villes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:prompt="@string/ville"
                android:spinnerMode="dialog" />

            <TextView
                android:text="@string/adresse" />
            <EditText
                android:id="@+id/adresse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text=""
                android:layout_columnSpan="2"
                android:layout_marginBottom="16dp"/>


            <TextView
                android:text="@string/tel" />
            <EditText
                android:id="@+id/telephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:text=""
                android:layout_columnSpan="2"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:text="@string/photo"
                android:layout_columnSpan="2"/>
            <Button
                android:id="@+id/btnPhoto"
                android:layout_columnSpan="2"
                android:background="@drawable/bouton_vert"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Photo"
                android:layout_marginBottom="16dp"/>


            <Button
                android:layout_marginTop="16dp"
                android:layout_columnSpan="2"
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Envoyer"
                android:background="@drawable/bouton_rouge"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
        </GridLayout>



    </ScrollView>




    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/rougeFonce"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <include layout="@layout/footer" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>